fix(DataGrid): design review horizontal scrolling

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_datagrid.scss
@@ -39,10 +39,11 @@
         align-items: center;
         color: $text-primary;
       }
+
       .#{$block-class}__head-select-all.#{$block-class}__checkbox-cell.#{$block-class}__checkbox-cell-sticky-left {
         position: sticky;
         z-index: 1;
-        left: 0;
+        left: $spacing-09;
       }
     }
 
@@ -53,7 +54,7 @@
     }
 
     td.#{c4p-settings.$carbon-prefix}--table-column-checkbox,
-    th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
+    .#{$block-class}__head-select-all.#{c4p-settings.$carbon-prefix}__checkbox-cell {
       /* stylelint-disable-next-line carbon/layout-token-use */
       padding-top: 0.6875rem;
 
@@ -62,9 +63,10 @@
         align-items: center;
         padding-top: 0;
       }
+
       &.#{$block-class}__checkbox-cell-sticky-left {
         position: sticky;
-        left: 0;
+        left: $spacing-09;
       }
     }
 
@@ -147,6 +149,7 @@
     }
   }
 }
+
 .#{$block-class}__grid-container::-webkit-scrollbar-thumb {
   background-color: $text-placeholder;
 }
@@ -155,6 +158,7 @@
   width: 6px;
   background-color: $background;
 }
+
 .#{$block-class}__grid-container {
   display: block;
   width: 100%;
@@ -240,14 +244,12 @@
     -webkit-appearance: none; // could be fixed by post-css plugin
   }
 
-  th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
-    display: block;
-  }
-
   td.#{c4p-settings.$carbon-prefix}--table-column-checkbox,
   th.#{c4p-settings.$carbon-prefix}--table-column-checkbox {
     /* stylelint-disable-next-line declaration-no-important */
-    padding-right: $spacing-06 !important;
+    width: $spacing-09 !important;
+    /* stylelint-disable-next-line declaration-no-important */
+    padding-right: $spacing-05 !important;
   }
 }
 
@@ -311,6 +313,7 @@
 
 .#{$block-class}__resizableColumn:hover {
   background-color: $background-selected-hover;
+
   .#{$block-class}__resizer {
     border-right: $spacing-01 solid $border-strong-01;
     background-color: $background-selected-hover;
@@ -318,11 +321,14 @@
 }
 
 .#{$block-class}__head-hidden-select-all {
-  padding-right: $spacing-08;
+  /* stylelint-disable-next-line carbon/type-token-use */
+  padding-right: 3.4rem;
+
   &.#{$block-class}__select-all-sticky-left {
     position: sticky;
     z-index: 1;
-    left: 0;
+    left: $spacing-09;
+    width: 3.4rem;
     background-color: $layer-accent-01;
   }
 }
@@ -358,6 +364,14 @@
   overflow: hidden;
   /* stylelint-disable-next-line declaration-no-important */
   width: 100% !important;
+}
+
+.#{$block-class}__sticky thead {
+  display: flex;
+
+  tr.#{$block-class}__sticky {
+    width: auto;
+  }
 }
 
 .#{$block-class}__displayFlex {
@@ -402,6 +416,7 @@
   .#{c4p-settings.$carbon-prefix}--data-table-content {
     flex: 1 1 0%;
   }
+
   .#{$block-class}__table-container {
     overflow: hidden;
   }
@@ -417,6 +432,7 @@
 
 .#{$block-class}__carbon-row-expanded {
   position: relative;
+
   &.#{$block-class}__carbon-row-expanded-hover-active::before {
     position: absolute;
     z-index: 2;
@@ -449,6 +465,7 @@
   .#{$block-class}__table-toolbar {
     flex: 0 0 auto;
   }
+
   .#{c4p-settings.$carbon-prefix}--table-toolbar {
     background: transparent;
   }
@@ -481,6 +498,7 @@
   .#{c4p-settings.$carbon-prefix}--data-table--selected:not(.#{$block-class}__active-row) {
   position: relative;
 }
+
 .#{$block-class}
   .#{c4p-settings.$carbon-prefix}--data-table--selected:not(.#{$block-class}__active-row)::before {
   position: absolute;
@@ -525,6 +543,7 @@
   justify-content: center;
   padding: 0;
   margin: 0;
+
   .#{c4p-settings.$carbon-prefix}--btn__icon {
     margin: 0;
   }
